# Nork_Town_Carford_car_shop

./: .dockerignore  .env  .gitignore  README.md  docker-compose.yml  dockerfile  entrypoint.sh  requirements.txt  setup.cfg  tox.ini
app/: manage.py
app/car_sales/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
app/car_sales/migrations/: 0001_initial.py  0001_initial.py.bkup
app/car_sales/templates/: base.html  home.html
app/car_sales/templates/car/: crud.html
app/car_sales/templates/customer/: crud.html  detail.html
app/car_sales/templates/sales/: crud.html
app/car_sales/tests/: test_admin.py  test_car_crud_view.py  test_customer_crud_view.py  test_customer_detail_view.py  test_forms.py  test_home_view.py  test_models.py  test_sales_crud_view.py
app/cardford/: asgi.py  settings.py  urls.py  wsgi.py
