[flake8]
ignore = W605,F405,F541,E501,F401,E251,W292, E999
max-line-length = 200
exclude =
    migrations
    __pycache__
    manage.py
    settings.py
    env
    .env
    
[yapf]
based_on_style = google
column_limit = 200
indent_width = 4
split_before_logical_operator = true
EACH_DICT_ENTRY_ON_SEPARATE_LINE = true
INDENT_DICTIONARY_VALUE = false
ALLOW_SPLIT_BEFORE_DICT_VALUE = false
INDENT_CLOSING_BRACKETS = false
DEDENT_CLOSING_BRACKETS = true
SPLIT_ALL_COMMA_SEPARATED_VALUES = true

[coverage:run]
command_line=./app/manage.py test
branch = true
omit =
    # things that should not show in coverage report
    */__init__.py
    */cardford/* 
    app/manage.py 
    */migrations/* 
    */tests/* 
source = app
    
    
[scriv]
format = md

[options]
package_dir=
    =app
packages=find:

[options.packages.find]
where=app